--- a/src/deploy/index.less
+++ b/src/deploy/index.less
@@ -1,7 +1,7 @@
 
 .main {
   width: 100%;
-  height: calc(100vh - 96px);
+  // height: calc(100vh - 96px);
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
